2010-08-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (sparse.model.matrix): argument 'drop.unused.levels = FALSE'
	NB: was *true* implicitly, before.  Compatibility with model.matrix().

	* R/sparseMatrix.R (formatSpMatrix, formatSparseM): factored out of
	printSpMatrix(); export as potentially useful for standard
	matrices, even.

2010-08-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/eigen.R (Schur): correct setMethod() such that
	Schur(<dgCMatrix>) works.

2010-08-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R, man/bdiag.Rd, NAMESPACE: export .bdiag() as well.

2010-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-44, CRAN-released: ...

	* R/diagMatrix.R (diagCspprod, Cspdiagprod): drop (possibly wrong) @factors
	* R/Ops.R (.Arith.CM.atom, .Arith.atom.CM, A.M.n, A.n.M): ditto

	* tests/factorizing.R: check some of the above.


2010-08-04  Douglas Bates  <bates@stat.wisc.edu>

	* R/spModels.R (fac2sparse): Fix name resolution problem
	(R-SIG-Mixed-Models post by Florent Duyme).

2010-07-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Depends): require R >= 2.10.0  --> can clean up
	* R/spModels.R: prepare to move most parts to new package
	MatrixModels

2010-07-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (prMatrix): add " (unitriangular)" as we already
	have for sparse matrices.

2010-07-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (.diagU2N): implement for "dtpMatrix" = old 'FIXME';
	(.dense.diagU2N): new utility, called from .diagU2N()

2010-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dtrMatrix.c (dtrMatrix_dtrMatrix_mm): new for tri %*% tri
	* R/products.R (%*%): ditto
	* tests/matprod.R: test it

2010-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (do.defaults): add 'nonMatched.action' with default
	ensuring that typos are caught.
